[package]
name = "kvs"
version = "0.1.0"
author = "Sanjay Sharma <me@sanjayts.net>"
description = "A simple key value store"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.0", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
predicates = "2"

[lib]
test = false

[[bin]]
name = "kvs"
test = false

